# vawt-rs

./: .gitignore  Cargo.toml  README.md
benches/: vawt_benchmark.rs
examples/: Aerofoil.ipynb  Streamtube.ipynb  Turbine.ipynb
examples/NACA0018/: NACA0018Re0040.data  NACA0018Re0080.data  NACA0018Re0160.data
src/: areofoil.rs  interpolate.rs  lib.rs  main.rs  streamtube.rs  turbine.rs
tests/: NACA0018  matlab_NACA0018_tsr-3.25.txt  matlab_compare.rs
