[package]
name = "vawt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
ndarray = "0.15.6"
ndarray-csv = "0.5.2"
ndarray-interp = {git = "https://github.com/jonasBoss/ndarray-interp.git"}
thiserror = "1.0.44"
