[package]
name = "vawt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
csv = "1.2.2"
itertools = "0.11.0"
ndarray = "0.15.6"
ndarray-csv = "0.5.2"
ndarray-interp = {path = "../ndarray-interp"}
thiserror = "1.0"

[dev-dependencies]
ndarray = {version = "0.15", features = ["approx-0_5"] }