[package]
name = "vawt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
argmin = {version="0.8.1"}
argmin-math = {version="0.3.0", features=["ndarray_latest-nolinalg-serde"]}
csv = "1.2.2"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.20"
ndarray = "0.15.6"
ndarray-csv = "0.5.2"
ndarray-interp = "0.3.1"
thiserror = "1.0"

[dev-dependencies]
ndarray = {version = "0.15", features = ["approx-0_5"] }
